# haskell-book

./: .gitignore  README.md  haskell-book.cabal
chapter-1/: test.hs
chapter-10/: DatabaseProcessing.hs  Exercises.hs  Intermission.hs
chapter-11/: BinaryTree.hs  CeaserCipher.hs  Exercises.hs  Goats.hs  HuttonsRazer.hs  PhoneSimulator.hs  Vehicle.hs
chapter-12/: BinaryTrees.hs  EitherLibrary.hs  Exercises.hs  Intermission.hs  MaybeLibrary.hs  Unfolds.hs
chapter-2/: print.hs  print2.hs
chapter-3/: list-functions.hs
chapter-4/: exercise.hs
chapter-5/: ChapterExercises.hs  Readme.md  TypeInference.hs
chapter-6/: ChapterExercises.hs  EqInstances.hs  Readme.md  TypeClasses.hs
chapter-7/: Arith4.hs  Exercises.hs  HigherOrder.hs  Intermissions.hs  Penguins.hs
chapter-8/: Factorial.hs  WordNumber.hs  division.hs  exercises.hs  factorial.hs
chapter-9/: Cipher.hs  Exercises.hs  Readme.md  intermissions.hs
src/: Main.hs
src/Chapter11/: CeaserCipher.hs  Intermission.hs
src/Chapter14/: QuickCheckExercises.hs
src/Chapter15/: Exercises.hs  Intermissions.hs  SemigroupExercises.hs
src/Chapter16/: Exercises.hs  Intermission.hs
src/Chapter17/: Exercises.hs  Intermission.hs  ListApplicative.hs  ValidationApplicative.hs  ZipListApplicative.hs  ZipListMonoid.hs
src/Chapter18/: EitherMonad.hs  Exercises.hs  Intermissions.hs
src/Chapter20/: Readme.md  haskell-book-chapter20.cabal
src/Chapter20/src/: Exercises.hs  Intermissions.hs  Main.hs
src/Chapter21/: Intermission.hs  Readme.md  haskell-book-chapter21.cabal
src/Chapter21/src/: Exercises.hs  Intermission.hs  MyList.hs  SkiFree.hs  Tree.hs
src/Chapter22/: Readme.md  haskell-book-chapter22.cabal
src/Chapter22/src/: CReader.hs  Intermission.hs  Main.hs  ReaderPractice.hs
src/Chapter25/: Readme.md  haskell-book-chapter25.cabal
src/Chapter25/src/: Intermission.hs  Main.hs
src/Chapter8/: WordNumber.hs
src/Chapter9/: Cipher.hs  Exercises.hs
src/RandomHacking/: SumTypes.hs
src/chapter-1/: learn.hs
src/chapter-10/: Exercises.hs
src/chapter-11/: CeaserCipher.hs  PhoneSimulator.hs  Vehicle.hs
src/chapter-12/: BinaryTrees.hs  EitherLibrary.hs  MaybeLibrary.hs
src/chapter-13/: Exercises.hs  PersonBuilder.hs
src/chapter-2/: print3.hs
src/chapter-3/: list-functions.hs
src/chapter-4/: exercise.hs  mood-change.hs
src/chapter-7/: Arith2.hs  Exercises.hs  Guard.hs  HigherOrder.hs  Intermissions.hs  TupleFunctions.hs
src/chapter-8/: Division.hs  WordNumber.hs
src/chapter-9/: Cipher.hs  Readme.md
test/: Spec.hs
test/Chapter14/: QuickCheckExercisesSpec.hs  QuickCheckWithoutHspec.hs
test/Chapter8/: WordNumberSpec.hs
