name:                haskell-book
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-testing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-testing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck
                       , checkers
                       , generic-arbitrary

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , QuickCheck
  exposed-modules:
--        Chapter8.WordNumber
--      , Chapter14.QuickCheckExercises
--      , Chapter15.Intermissions
--      , Chapter15.Exercises
--      , Chapter9.Cipher
--      , Chapter11.CeaserCipher
--      , Chapter16.Intermission
          Chapter16.Exercises,
          Chapter17.Intermission

  default-language: Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-book
    , containers
    , QuickCheck
    , hspec
    , checkers

  default-language: Haskell2010

