name:                haskell-book-chapter22
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-testing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-testing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck
                       , checkers
                       , mtl

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , QuickCheck
      , checkers
      , generic-arbitrary
      , mtl

  exposed-modules:
     Intermission
   , CReader
    
  default-language: Haskell2010

